# NYT-Spelling-Bee-Project

NYT-Spelling-Bee-Create/: index.html  script.js  style.css
NYT-Spelling-Bee-Solver/: backup.py  main.py  pyproject.toml  solve.py
NYT-Spelling-Bee-Solver/templates/: index.html  result.html  webResult.html
